Ensure the page is not visible below the footer in any condition.

--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -1,7 +1,7 @@
 footer.post-info {
   transform: translateY(0%);
   position: fixed;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 100%;
   background: @paper;
